--- a/src/ToDo/Views/Tasks/Index.cshtml
+++ b/src/ToDo/Views/Tasks/Index.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "All Tasks";
 }
 
-<ul>
+<ul class="task-list">
     @foreach (var task in @Model.Tasks)
     {
-        <li><a asp-action="Single" asp-route-id="@task.Id">@task.Name</a></li>
+        <li class="task-item"><a asp-action="Single" asp-route-id="@task.Id">@task.Name</a></li>
     }
 </ul>
