--- a/src/ToDo/Views/_ViewImports.cshtml
+++ b/src/ToDo/Views/_ViewImports.cshtml
@@ -1,1 +1,3 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, ToDo
+@using HtmlTemplate = System.Func<dynamic?, Microsoft.AspNetCore.Html.IHtmlContent>;
