--- a/src/ToDo/Views/Tasks/Edit.cshtml
+++ b/src/ToDo/Views/Tasks/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit Task";
     ViewData["Actions"] = new[]
     {
-        (HtmlTemplate)(@<button type="submit" form="task-edit-form"><i class="fas fa-calendar-plus"></i>Save</button>),
+        (HtmlTemplate)(@<button type="submit" form="task-edit-form"><i class="fas fa-clipboard-check"></i>Save</button>),
     };
 }
 
