--- a/src/ToDo/Views/Tasks/Index.cshtml
+++ b/src/ToDo/Views/Tasks/Index.cshtml
@@ -2,6 +2,10 @@
 
 @{
     ViewData["Title"] = "All Tasks";
+    ViewData["Actions"] = new[]
+    {
+        (HtmlTemplate)(@<a asp-action="Create"><i class="fas fa-plus"></i>New</a>),
+    };
 }
 
 <ul class="task-list">
