--- a/src/ToDo/wwwroot/styles/main.css
+++ b/src/ToDo/wwwroot/styles/main.css
@@ -18,6 +18,20 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+div.home-button-container > a {
+    color: var(--foreground-color);
+    text-decoration: none;
+    display: inline-block;
+    padding: 1rem;
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+div.title-container > * {
+    display: inline;
+    vertical-align: bottom;
+}
+
 h1.content-title {
     font-weight: 100;
     font-size: 4rem;
