--- a/src/ToDo/Css/main.css
+++ b/src/ToDo/Css/main.css
@@ -1,17 +1,4 @@
-﻿* {
-    --background-color: #efefef;
-    --foreground-color: #2c2c2c;
-    --border-color: #b6b6b6;
-    --shadow-color: rgba(78, 78, 78, 0.60);
-    --list-item-color: #9aded4;
-    --list-item-color-hover: #73d3c5;
-    --icon-color: #9aded4;
-    --icon-destructive-color: #e88b8b;
-
-    box-sizing: border-box;
-}
-
-body {
+﻿body {
     margin: 0;
     overflow: hidden;  
     color: var(--foreground-color);
@@ -195,7 +182,7 @@ div.actions-container a:hover > i, div.actions-container button:hover > i {
     color: var(--icon-color);
 }
 
-div.actions-container a.destructive:hover > i, div.actions-container button.destructive > i {
+div.actions-container a.destructive:hover > i, div.actions-container button.destructive:hover > i {
     color: var(--icon-destructive-color);
 }
 
