--- a/src/ToDo/Views/Shared/_Layout.cshtml
+++ b/src/ToDo/Views/Shared/_Layout.cshtml
@@ -21,12 +21,16 @@
     <title>@ViewData["Title"]</title>
 
     <environment include="Development">
+        <link rel="stylesheet" type="text/css" href="~/css/global.css" />
         <link rel="stylesheet" type="text/css" href="~/css/main.css" />
+        <link rel="stylesheet" type="text/css" href="~/css/modal.css" />
         <link rel="stylesheet" type="text/css" href="~/font-awesome/css/all.css">
     </environment>
 
     <environment include="Production">
+        <link rel="stylesheet" type="text/css" href="~/css/global.min.css" />
         <link rel="stylesheet" type="text/css" href="~/css/main.min.css" />
+        <link rel="stylesheet" type="text/css" href="~/css/modal.min.css" />
         <link rel="stylesheet" type="text/css" href="~/font-awesome/css/all.min.css">
     </environment>
 </head>
@@ -45,6 +49,7 @@
             @RenderSection("Actions", required: false)
         </div>
     </div>
+    @RenderSection("Overlay", required: false)
     @RenderSection("Scripts", required: false)
 </body>
 </html>
