Improve modal dialog.

--- a/src/ToDo/Views/Tasks/Single.cshtml
+++ b/src/ToDo/Views/Tasks/Single.cshtml
@@ -25,7 +25,7 @@
 }
 
 @section Scripts {
-    <script src="~/scripts/Views/Tasks/single.js"></script>
+    <script data-main="views.tasks.single" src="~/requirejs/require.js"></script>
 }
 
 @section Overlay {
