--- a/src/ToDo/Views/Shared/_Layout.cshtml
+++ b/src/ToDo/Views/Shared/_Layout.cshtml
@@ -20,6 +20,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"]</title>
 
+    <script src="~/js/rjsconfig.js"></script>
+
     <environment include="Development">
         <link rel="stylesheet" type="text/css" href="~/css/global.css" />
         <link rel="stylesheet" type="text/css" href="~/css/main.css" />
