Rename models to avoid conflicts.

--- a/src/ToDo/Views/Tasks/Edit.cshtml
+++ b/src/ToDo/Views/Tasks/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ToDo.ViewModels.Tasks.Edit
+﻿@model ToDo.ViewModels.Tasks.EditViewModel
 
 @{
     ViewData["Title"] = Model.Task.Id != null ? "Edit Task" : "Create Task";
