--- a/src/ToDo/Views/Tasks/Single.cshtml
+++ b/src/ToDo/Views/Tasks/Single.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Html
 
-@model ToDo.ViewModels.Tasks.Single
+@model ToDo.ViewModels.Tasks.SingleViewModel
 
 @{
     ViewData["Title"] = "View Task";
